# movedb-demo

./: .gitignore  _quarto.yml  flake.nix  index.qmd  ingest.py  main.py  pyproject.toml  run.sh  stop.sh  test_b3d.py
__marimo__/session/: main.py.json
data/: gait_trajectories.parquet  kinematics_summary.parquet  subjects.parquet  trials.parquet
